--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
+    "fastest-levenshtein": "^1.0.16",
     "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.19.0",
