--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-wordcloud": "^1.2.7",
+    "recharts": "^3.4.1",
     "string-similarity": "^4.0.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
